# sixth-street-assesment

./: Dockerfile  Makefile  PROBLEM.md  SOLUTION.md  pyproject.toml
src/boilerplate/: .env  app.py
tests/: test_app.py
