[tool.poetry]
name = "TODO"
version = "0.1.0"
description = "TODO"
authors = ["Ross Carvalho rosscarvalho22@gmail.com"]
readme = "README.md"
# TODO: Rename the package/directory.
packages = [{include = "boilerplate", from = "src"}]

[tool.poetry.dependencies]
python = "~3.13.2"
fastapi = "^0.109.1"
uvicorn = "^0.30.3"
requests = "^2.32.3"
cachetools = "^5.5.2"
dotenv = "^0.9.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
